fixed sticky inputs div not being sticky because overflow-x was added in the inputs div css instead of body. added anti alliasing for text globally. some minor flexbox changes in divs.

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   margin-top: 0px;
   margin-left: 0px;
@@ -5,6 +10,7 @@ body {
   /* margin-bottom: 0px; */
   background-color: #d1d1d1;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 svg {
@@ -34,19 +40,17 @@ path {
   justify-content: space-evenly;
   gap: 15px;
   align-items: center;
-  overflow-x: hidden;
 }
 
 #inputs-container {
   border: 1px solid #009de6;
-  box-shadow: 0px 0px 20px 1px #009de6;
+  box-shadow: 1px 0px 20px 1px #009de6;
   align-self: stretch;
   background: linear-gradient(to top, #00a8f6, #02c8da);
   border-radius: 2px;
   background-size: 200% auto;
   padding-top: 5px;
-  padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   top: 0; /* for sticky to work */
   position: sticky; /* sticks the inputs to the top of the page when it has been scrolled */
   margin-top: 0px;
@@ -60,7 +64,7 @@ path {
 
 #viz-container {
   display: flex;
-  flex: 1 0 50%;
+  flex: 1 0 45%;
   justify-content: space-evenly;
   gap: 25px;
   flex-flow: row wrap;
@@ -105,11 +109,12 @@ path {
 
 .near-button-text {
   font-weight: bold;
+  /* text-shadow: 0px 1px 2px rgb(0, 0, 0); UNCOMMENT THIS IF TEXT SHADOW IS NEEDED*/
 }
 
 .flex-buttons-with-near-text {
   display: flex;
-  gap: 5px;
+  gap: 2px;
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
